# Howz.fun

./: .gitignore  CONTEXT.md  DEPLOY-SCRIPT-README.md  README.md  STEP-BY-STEP-GUIDE.md  arcium-forum-post.md  check_encoding.js  final_id_check.js  hackathon-deploy.sh  package-lock.json  package.json  rule.md  run_log.txt  validate_mismatch.js
house.fun/: .cursorrules  .gitignore  ARCHITECTURE_DEEP_DIVE.md  ARCIUM_INTEGRATION.md  ARCIUM_SETUP_GUIDE.md  Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_WALKTHROUGH.md  HACKATHON_TRACKS.md  HANDOVER_PROMPT.md  PLAN_PHASE_1.md  README.md  ROADMAP.md  TECH_STACK_2026.md  build_wsl.sh  err.txt  error.txt  extract.txt  extracted_ids.txt  extracted_latest_ids.txt  failed_log.txt  failed_log3.txt  final_build.sh  final_build_v2.sh  final_build_v3.sh  final_build_v4.sh  final_build_v5.sh  get_pubkey.js  latest_run.txt  magicblock.config.json  repair_and_build.sh  robust_build.sh  run_58_log.txt  run_latest_log.txt  runs.json  runs.txt  shadow_poker_build.sh  stitch_prompts.json  tree-deps.txt  (+3 more)
house.fun/.ai/: ARCHITECTURE.md  CI_CD_DEEP_RESEARCH.md  CONTEXT.md  IMPLEMENTATION_PLAN.md  MVP_BUILD_GUIDE.md  PROGRESS.md  SESSION_SAVE_STATE.md
house.fun/.github/workflows/: build-solana.yml  deploy-flip-it.yml
house.fun/.mcp/: stitch.json
house.fun/deploy/keys/: degen_derby-keypair.json  fight_club-keypair.json  shadow_poker-keypair.json
house.fun/house-fun-app/: .env.example  airdrop.cjs  airdrop_new.cjs  authority.json  build_log.txt  check_balance.cjs  check_balance.ts  check_balances.ts  check_house.cjs  check_house.ts  dd_idl_old.txt  drizzle.config.ts  err.txt  first_commit.txt  generate_authority.cjs  git_log_full.txt  init-error.txt  init-output.txt  init2.txt  init3.txt  init4-utf8.txt  init4.txt  init_v2_results.txt  initialize_house.cjs  initialize_house.ts  initialize_house_manual.cjs  log_dd.txt  log_fc.txt  next.config.js  package-lock.json  package.json  patch_idls.js  patch_idls.ts  pda-output.txt  sp_idl_old.txt  test-output.txt  test-output2.txt  test-programs.ts  transfer_funds.cjs  tsc-err-utf8.txt  (+6 more)
house.fun/house-fun-app/drizzle/: 0000_fair_thaddeus_ross.sql  0001_add_game_tables.sql
house.fun/house-fun-app/drizzle/meta/: 0000_snapshot.json  _journal.json
house.fun/house-fun-app/public/: manifest.webmanifest
house.fun/house-fun-app/scripts/: gen_keys.cjs  init-house.ts  init_raw.cjs  initialize_houses.ts  print_keys.cjs  setup-aws-rds.ps1  setup-aws-rds.sh
house.fun/house-fun-app/src/: env.js
house.fun/house-fun-app/src/app/: layout.tsx  page.tsx
house.fun/house-fun-app/src/app/admin/: page.tsx
house.fun/house-fun-app/src/app/leaderboard/: loading.tsx  page.tsx
house.fun/house-fun-app/src/app/profile/: page.tsx
house.fun/house-fun-app/src/app/verify/: page.tsx
house.fun/house-fun-app/src/components/: error-boundaries.tsx  loading.tsx
house.fun/house-fun-app/src/components/games/: FightClubGame.tsx  (+5 more)
house.fun/house-fun-app/src/context/: DemoModeContext.tsx
house.fun/house-fun-app/src/data/: mockData.ts
house.fun/house-fun-app/src/hooks/: useDegenDerbyArcium.ts  useFlipItArcium.ts  useGameData.ts  useGameSounds.ts  useGameState.ts  useShadowPokerArcium.ts  useWalletBalance.ts  useWebSocket.ts
house.fun/house-fun-app/src/lib/: design-tokens.ts  provably-fair.ts  utils.test.ts  utils.ts
house.fun/house-fun-app/src/providers/: SolanaWalletProvider.tsx
house.fun/house-fun-app/src/styles/: globals.css
house.fun/house-fun-app/src/test/: setup.ts
house.fun/house-fun-app/src/trpc/: react.tsx
house.fun/house-fun-app/src/types/: jupiter.d.ts
house.fun/house-fun-bolt/: Anchor.toml  Cargo.toml
house.fun/house-fun-bolt/programs/house-fun-bolt/: Cargo.toml
house.fun/idls_temp/: build-script-build-script-build.json  degen_derby-keypair.json  degen_derby.json  fight_club-keypair.json  fight_club.json  lib-ahash.json  lib-aho_corasick.json  lib-anchor_attribute_access_control.json  lib-anchor_attribute_account.json  lib-anchor_attribute_constant.json  lib-anchor_attribute_error.json  lib-anchor_attribute_event.json  lib-anchor_attribute_program.json  lib-anchor_derive_accounts.json  lib-anchor_derive_serde.json  lib-anchor_derive_space.json  lib-anchor_lang.json  lib-anchor_lang_idl.json  lib-anchor_lang_idl_spec.json  lib-anchor_syn.json  lib-anyhow.json  lib-arrayref.json  lib-arrayvec.json  lib-autocfg.json  lib-base16ct.json  lib-base64.json  lib-bincode.json  lib-bitflags.json  lib-blake3.json  lib-block_buffer.json  lib-borsh.json  lib-borsh_derive.json  lib-borsh_derive_internal.json  lib-borsh_schema_derive_internal.json  lib-bs58.json  lib-bv.json  lib-bytemuck.json  lib-bytemuck_derive.json  lib-byteorder.json  lib-cargo_toml.json  (+152 more)
house.fun/programs/degen-derby/: .gitignore  Anchor.toml  README.md  package.json
house.fun/programs/fight-club/: Anchor.toml  Cargo.toml  package.json
house.fun/programs/flip-it/: Anchor.toml  Arcium.toml  Cargo.toml  DEPLOY-GUIDE.md  DEPLOY.md  README.md  package.json
house.fun/programs/flip-it/artifacts/: circuits_hash.txt
house.fun/programs/flip-it/encrypted-ixs/: Cargo.toml  coin_flip.rs
house.fun/programs/flip-it/scripts/: init-comp-def.ts  initialize-house.js
house.fun/programs/flip-it/tests/: flip-it.ts
house.fun/programs/shadow-poker/: Anchor.toml  Cargo.toml  README.md
house.fun/tests/: initialize.ts
(+70 files in other folders)
