[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true

# Pin indexmap to a version compatible with the Solana-bundled rustc 1.79.0-dev.
# indexmap >=2.7.0 requires rustc 1.82 which the bundled compiler does not satisfy.
[workspace.dependencies]
indexmap = "=2.6.0"
