[package]
name = "degen-derby"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "degen_derby"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
arcium-client = { version = "0.8.0", default-features = false }
arcium-macros = "0.8.0"
arcium-anchor = "0.8.0"
blake3 = "=1.5.5"
