[package]
name = "degen-derby"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "degen_derby"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-client = { version = "0.8.5", default-features = false }
arcium-macros = "0.8.5"
arcium-anchor = "0.8.5"
blake3 = "=1.5.5"
ephemeral-rollups-sdk = "0.8.5"

