[package]
name = "fight-club"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fight_club"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
pyth-solana-receiver-sdk = "1.1.0"
blake3 = "=1.5.5"

[patch.crates-io]
# indexmap >=2.7.0 requires rustc 1.82, but cargo build-sbf uses the
# Solana-bundled rustc 1.79.0-dev. Pin to 2.6.0 (supports rustc 1.75+).
indexmap = "=2.6.0"
